# health-app

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
notebooks/: 0_exploration.ipynb  1_model.ipynb  2_app.ipynb
src/: health_context.py  llm_service.py  utils.py
static/: styles.css
templates/: authenticate.html  heart.html  index.html  layout.html  login.html  profile.html  register.html  sleep.html  steps.html
tests/: README.md  conftest.py  test_date_picker.py  test_goals.py  test_login.py
